이미지 경로 수정

--- a/_posts/2022-07-25-acmicpc-9375.md
+++ b/_posts/2022-07-25-acmicpc-9375.md
@@ -7,8 +7,8 @@ tags: [programming, acmicpc]
 pin: true
 ---
 
-<img src='{{ "/assets/img/acmicpc/acmicpc9375_1.png" | relative_url }}' alt='relative'>
-<img src='{{ "/assets/img/acmicpc/acmicpc9375_2.png" | relative_url }}' alt='relative'>
+<img src="/assets/img/acmicpc/acmicpc9375_1.png" alt="acmicpc9375_1">
+<img src="/assets/img/acmicpc/acmicpc9375_2.png" alt="acmicpc9375_2">
 
 ## 접근방식
 
