백준 1676번_팩토리얼 0의 개수

--- a/_posts/2022-07-25-acmicpc-9375.md
+++ b/_posts/2022-07-25-acmicpc-9375.md
@@ -1,11 +1,12 @@
 ---
-title: 백준 9375번
+title: 백준 9375번_패션왕 신해빈_java
 author: syk531
 date: 2022-07-25 19:14:00 +09:00
 categories: [programming, acmicpc]
 tags: [programming, acmicpc]
 pin: true
 ---
+## 문제
 
 <img src="/assets/img/acmicpc/acmicpc9375_1.png" alt="acmicpc9375_1">
 <img src="/assets/img/acmicpc/acmicpc9375_2.png" alt="acmicpc9375_2">
